--- a/play1.yml
+++ b/play1.yml
@@ -1,10 +1,10 @@
 ---
-- hosts: localhost
+- hosts: my-vm
   gather_facts: false
 
   tasks:
-   - name: Register a new value
-     shell: echo "/etc/resolv.conf"
-     register: PLAY1VAR
+  - name: Register a new value
+    shell: echo "/etc/resolv.conf"
+    register: PLAY1VAR
 
-   - debug: msg="{{ PLAY1VAR.stdout }}"
+  - debug: msg="{{ PLAY1VAR.stdout }}"
